# exciting

./: .gitlab-ci.yml  INSTALL.md  README.md
.gitlab/: docs.yml  exciting-debian-buster-gcc8-hdf5-mpismp.yml  exciting-debian-buster-gcc8-openmpi3-mpismp.yml  exciting-debian-buster-gcc8-serial.yml  exciting-debian-buster-gcc8-smp.yml  exciting-debian-buster-intel2019-mpismp.yml  exciting-debian-gcc8-hdf5.yml  exciting-sirius.yml  jupyter-exciting-python-3.7-gcc8-smp.yml  python-libs.yml  run_pylint.sh  run_schema_parsing.sh
docs/: ford_settings.md
src/: LS_iteration.f90  addrhocr.f90  allatoms.f90  atom.f90  atom1.f90  bandstr.f90  borncharges.f90  bz_path.f90  charge.f90  checkinput.F90  chgdist.F90  core_overlap.f90  diag_get_eig.f90  dos.f90  effmass.f90  elfplot.f90  (+74 more)
tools/excitingscripts/: pyproject.toml
tools/excitingscripts/excitingscripts/: compare_transition_energies.py
tools/excitingscripts/excitingscripts/execute/: convergence_test.py  single.py  volume_optimization.py
tools/excitingscripts/excitingscripts/plot/: band_structure.py  dos.py  volumecurves.py
tools/excitingscripts/excitingscripts/setup/: band_structure.py  convergence_test.py  interlayer_distance.py  volume_optimization.py
tools/excitingscripts/tests/: test_compare_transition_energies.py
tools/excitingscripts/tests/execute/: test_execute_convergence_test.py  test_execute_volume_optimization.py
tools/excitingscripts/tests/setup/: test_excitingroot.py  test_setup_band_structure.py  test_setup_convergence_test.py  test_setup_interlayer_distance.py  test_setup_volume_optimization.py
(+520 files in other folders)
