[project]
name = "excitingscripts"
description = "Executable command-line scripts for basic tasks with the exciting code."
version = "0.0.1"

requires-python = ">=3.6"

dependencies = [
    'numpy>=1.14.5', 
    'matplotlib>=2.2.0', 
    'scipy>=1.7.0', 
    'excitingtools>=1.1.0'
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel>=0.35.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["excitingscripts"]
